removed redundant fields
